systemd (215-6ubuntu1) UNRELEASED; urgency=medium

  * Merge with Debian unstable. Remaining Ubuntu changes:
    - Create disk/by-partlabel links for mmcblk partitions.
    - Hack to support system-image read-only /etc, and modify files in
      /etc/writable/ instead.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sun, 12 Oct 2014 17:29:00 +0200

systemd (215-6) unstable; urgency=medium

  [ Martin Pitt ]
  * Cherry-pick upstream patch to fix udev crash in link_config_get().
  * Cherry-pick upstream patch to fix tests in limited schroot environments.
  * Add d/p/Add-env-variable-for-machine-ID-path.patch: Allow specifying an
    alternate /etc/machine-id location. This is necessary for running tests
    as long as it isn't in our base images (see Debian #745876)
  * Run tests during package build. For the first round don't make them fatal
    for now (that will happen once we see results from all the architectures).
  * Drop our Check-for-kmod-binary.patch as the upstream patch
    units-conditionalize-static-device-node-logic-on-CAP.patch supersedes it.
  * Drop Use-comment-systemd.-syntax-in-systemd.mount-man-pag.patch, as
    our util-linux is now recent enough. Bump dependency to >= 2.21.
  * Adjust timedated and hostnamed autopkgtests to current upstream version.
  * Replace our Debian hwdb.bin location patch with what got committed
    upstream. Run hwdb update with the new --usr option to keep current
    behaviour.
  * debian/README.Debian: Document how to debug boot or shutdown problems with
    the debug shell. (Closes: #766039)
  * Skip-99-systemd.rules-when-not-running-systemd-as-in.patch: Call path_id
    under all init systems, to get consistent ID_PATH attributes. This is
    required so that tools like systemd-rfkill can be used with SysVinit or
    upstart scripts, too. (LP: #1387282)
  * Switch libpam-systemd dependencies to prefer systemd-shim over
    systemd-sysv, to implement the CTTE decision #746578. This is a no-op on